--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "6",
     "swr": "^2.2.5"
   },
   "devDependencies": {
